--- a/index.html
+++ b/index.html
@@ -4,109 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to EwketHub</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        font-family: "Figtree", sans-serif;
-        min-width: 230px;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-      }
-
-      .top-navigation {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        padding: 5px 20px;
-        border-bottom: 1px solid #2d2f31;
-        column-gap: 20px;
-      }
-      .site-image {
-        height: 40px;
-      }
-
-      main {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-      }
-
-      .wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-grow: 1;
-      }
-
-      .button-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .image-container {
-        background-image: url("assets/images/landing.jpg");
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        flex-grow: 1;
-        margin: 10%;
-        height: 80%;
-        background-size: cover;
-        background-position: center;
-        color: white;
-        border-radius: 50px;
-      }
-
-      .text-button-container {
-        background-color: #2d2f31c9;
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        flex-grow: 1;
-        border-radius: 50px;
-      }
-
-      .button-wrapper {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        gap: 30px;
-      }
-
-      .login {
-        padding: 10px 30px;
-        background-color: #00b3ff;
-        border-radius: 5px;
-      }
-
-      .signup {
-        padding: 10px 30px;
-        background-color: #484a4b;
-        border-radius: 5px;
-      }
-    </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
-      <div class="top-navigation">
-        <img
-          class="site-image"
-          src="assets/images/logos/logo-row.png"
-          alt="EwketHub logo"
-        />
+    <nav class="navbar-container">
+      <div class="menu-wrapper">
+        <div class="menu">
+          <i class="bi menu-icon bi-list"></i>
+        </div>
+        <div class="logo">
+          <a href="/"><div class="logo-img"></div></a>
+        </div>
       </div>
+
+      <div class="main-navigation">
+        <div class="nav-items">
+          <ul class="site-navigation">
+            <li class="selected">Home</li>
+            <li>My courses</li>
+            <li>Create a course</li>
+          </ul>
+        </div>
+
+        <div class="nav-auth">
+          <ul class="auth-navigation">
+            <li class="login">
+              <a href="./views/auth/login/index.html">Login</a>
+            </li>
+            <li class="signup">
+              <a href="./views/auth/signup/index.html">Signup</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main>
       <div class="wrapper">
         <div class="image-container">
           <div class="text-button-container">
@@ -117,12 +60,17 @@
               </p>
             </div>
             <div class="button-wrapper">
-              <div class="login">Login</div>
-              <div class="signup">Signup</div>
+              <div class="login-bottom action-button">
+                <a href="./views/auth/login/index.html">Login</a>
+              </div>
+              <div class="signup-bottom action-button">
+                <a href="./views/auth/signup/index.html">Signup</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <script src="../../../navigation.js"></script>
   </body>
 </html>
